tests/neg/into-override.check
-- [E164] Declaration Error: tests/neg/into-override.scala:16:15 -------------------------------------------------------
16 |  override def f(x: into X) = super.f(x)    // error
   |               ^
   |               error overriding method f in trait A of type (x: X): Unit;
   |                 method f of type (x: into X): Unit has different occurrences of `into` modifiers
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg/into-override.scala:18:6 --------------------------------------------------------
18 |class D[X] extends B[X], C[X] // error
   |      ^
   |      error overriding method f in trait B of type (x: X): Unit;
   |        method f in trait C of type (x: into X): Unit has different occurrences of `into` modifiers
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg/into-override.scala:21:15 -------------------------------------------------------
21 |  override def f(x: X) = super.f(x) // error
   |               ^
   |               error overriding method f in trait C of type (x: into X): Unit;
   |                 method f of type (x: X): Unit has different occurrences of `into` modifiers
   |
   | longer explanation available when compiling with `-explain`
